# speederboard

./: .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  TEMPLATES.md  build.rs  rustfmt.toml  todo.md
.github/: dependabot.yml  rclone.conf
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cdn-update.yml  check.yml  docs.yml  issues.yml  windows.yml  worker.yml
.sqlx/: query-04a6cdf449724dc57a355fc273111ca80bcee2a2f6fbdfdb47fb64d6607adfa2.json  query-067e669195eba1203b2e6ee42e27908aaa7c0f9bb79633cef9346fc606edd053.json  query-06a02bece97af7c6a6ff0423d172c86e403688994af67bf3a515715e6aeed614.json  query-095e2405fc9e4a6f514fd616bc4b83ea57dd3801d8004a79078234a119417801.json  query-095f502bcd0cb4c96cd14f41bdbc0c0507dbf359ad05cc0ae697818fb0cb5330.json  query-0ae32931132dc12428ae792838ab443c03a8310030fe424f72baf7936ca4f375.json  query-0fa24fbd411d3c538aecd95d55f8c5693072413c1596bec7ee09201f6e7aefe9.json  query-11029edec0f3be123d66e4a5db78574cea858803417593f1b3a6e7871e82f186.json  query-122c65a23e7ddc16a4879d989552ed2bbd6b3a2e3e92035bea6d676f0ab5d021.json  query-128d2fce2adfaac5b17e693c406eca718c9305498ddcb22228d179cbf8389448.json  query-138f8484178df1c116aecef447ad77cf04b5a4a697da29107e638c10c4ee6c27.json  query-152b85b574d86d6ef0b762ed857598c53d45972f8a86928b1a8237878dd73c16.json  query-15c2fc47a465359096e97208ee0446e94c4834267bf54528192bf575cd39474e.json  query-15c6d61a92ba3a6c17276412f8820de57a2d46e3aaa9daf6b54384258f83a740.json  query-163255e71b17222ea3b62bd3597ee26e8cf035122020d4dc3cedca0e15c0222e.json  query-16d45070f9efd14715ca5fc9aef4a7910286599f11e3810a3327e73bfd914d64.json  query-1843b5e151653fb5834ee70575491b19f0fb5fb58b49f601d610a417b252a133.json  query-18a29f34ec8df6250772b90a632432a528a1e9e8d691fa5b41bf06376534167a.json  query-1a51c977a367a1c6311c5200ff2916f5218329332a8b132b342d7af6decde4a6.json  query-1ba271fe71deb2c4a059d0fc091fa79dff5c2d0ab881c4cfd76330d60d603a83.json  query-241cabc0bb83e6137b6528ffdd2bae5667afb5c6e5a88f64a890d6e5c8215a8b.json  query-25834d7acbbda35ec95aebea311e56d45a201a61fe1a016c03d3ec2a5ba0d57b.json  query-25edda6841328d4993d2a691d136b938310c8ea13601917a4a0b030722f4b3e0.json  query-28afb6741eb274f2a4402c080c51ae2ca8683b80777d3e97e79bef01769912e9.json  query-2b495f3f01d9251c260a8fe6a1aaeb5d252e80c0a14a90b6247d9815828855c7.json  query-2c366ee7e87332b772671d70ac067623665c40b02316c576385af3cdd1f19258.json  query-2cb8cbe9ac4169ef6090b3214eaf5c6a0f79c0cf9d466488da9548b9e8011317.json  query-2deef9c6f33fb19efb45b34682b8a3cdb01f3521853420d3d0a3ac24c891ec81.json  query-30e9115f824a63d483e07312b33b0ac4608164360efcb584ed9d052b375ff670.json  query-32c100272a134c43efd7582b709bb63f226b637f15da205c539c30659b658f61.json  query-35c96f84eb461f4169f7c505a953852aaa17ade03ee8df3bafebcb56247dd7a4.json  query-3bc179f2ef19e2053d47bc0c06c09847c577957c449cf55dae37dffccd1cd19c.json  query-3e4f6a5f00b2e039abaf08aef536a768e88622cb66019798e09620ea07685418.json  query-3fe52addc7af58346841689e967dd8f21d2bcba0d6b601c6d4b210066f2cd192.json  query-4006610bfc6b7fd9d6f8b44a9cfc7327d260c4d0b85f57b1502215e7292560cd.json  query-4197280abf522f3e1c69b557f74ba024fa7f6434183313a5641e24323a657e59.json  query-4a4c2bba4df3f2a11378e752daa9fc29a763b03c24755dff05ededf2765128fc.json  query-4ef203b94361c9368b8ee8f5b7b803ac35de675fd98fe0bc87a0e89e47e6a482.json  query-4f6f2bd8ded78eefd3c74bdb2177bf67906e06c35efd8a6d0c78fadc2ed0714f.json  query-5135c9246e2a602049236eb26f17f0457a3249cc2e0985f1a365cc7e42b41f27.json  (+83 more)
assets/: .gitignore
assets/public/: style.css
assets/public/page-scripts/: settings.js
assets/source/: coverart.ase
cdn-upload-worker/: .gitignore  package-lock.json  package.json  wrangler.prod.toml
cdn-upload-worker/src/: worker.ts
dev-cdn/: index.js  package-lock.json  package.json
docs/: CDN.md  FRONTEND.md  assets.md  cdn.md  index.md  style.md  templates.md  translations.md
migrations/: 20230804034810_Initial_migrations.sql
public/: style.css
speederboard.org-temp/: _redirects
src/: config.rs  dev.rs  error.rs  id.rs  language.rs  main.rs  paths.rs  router.rs  state.rs  template.rs  user.rs  util.rs  utils.rs
src/error/: mod.rs  translate.rs
src/fixtures/: .gitignore  add_game.sql  add_run.sql  add_user.sql  many_runs.sql
src/fixtures/generate/: all.py  many_games.py  many_runs.py  many_users.py
src/model/: category.rs  forum.rs  game.rs  member.rs  mod.rs  permissions.rs  run.rs  user.rs
src/model/fixtures/: add_user.sql
src/routes/: index.rs  login.rs  mod.rs  settings.rs  signup.rs  user.rs
src/routes/admin/: game.rs
src/routes/forum/: edit_post.rs  mod.rs  new_post.rs  post.rs  root.rs
src/routes/game/: category.rs  index.rs  mod.rs  new_run.rs  root.rs  run.rs
src/routes/game/modtools/: feed.rs  mod.rs  run.rs  team.rs
src/routes/game/settings/: category.rs  game.rs  mod.rs
src/routes/settings/: credentials.rs  files.rs  mod.rs
src/template/: linkify.rs  mod.rs  translate.rs
src/template/linkify/: category.rs  forum_post.rs  game.rs  mod.rs  run.rs  user.rs
src/test/: mod.rs  util.rs
subcrates/hashserver/: Cargo.toml
subcrates/hashserver/src/: lib.rs
subcrates/simpleinterpolation/: Cargo.toml
subcrates/simpleinterpolation/src/: lib.rs
templates/: 400.jinja  401.jinja  404.jinja  500.jinja  base.jinja  category.jinja  confirm.jinja  create_game.jinja  create_run.jinja  edit_category.jinja  edit_game.jinja  error.jinja  forum.jinja  forum_post.jinja  game.jinja  game_team.jinja  index.jinja  login.jinja  moderation_feed.jinja  new_post.jinja  notifications.jinja  review_run.jinja  run.jinja  settings.jinja  signup.jinja  user.jinja  verify_run.jinja
tests/: integrate.sh
translations/: en.lang
