[package]
name = "speederboard"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["subcrates/simpleinterpolation"]

[profile.release]
incremental = false
codegen-units = 1
lto = "fat"

[features]
default = ["dev"]
dev = ["dep:notify"]

[dependencies]
tower-http = { version = "0.5", default-features = false, features = [
    "compression-full",
    "tracing",
    "fs"
] }
notify = { version = "6", default-features = false, optional = true, features = [
    "macos_kqueue",
] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png"
] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "stream",
    "trust-dns",
], default-features = false }
sqlx = { version = "0.7", features = [
    "macros",
    "postgres",
    "tls-rustls",
    "runtime-tokio",
    "chrono",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "tracing",
] }
rust-s3 = { version = "0.33", default-features = false, features = ["tokio-rustls-tls", "with-tokio"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
redis = { version = "0.25", features = ["aio", "connection-manager"] }
axum = { version = "0.7", features = ["http2", "macros"] }
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
garde = { version = "0.18", features = ["derive", "email", "url"] }
simpleinterpolation = { path = "./subcrates/simpleinterpolation" }
tower = { version = "0.4", default-features = false }
tera = { version = "1.19", features = ["builtins"] }
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
markdown = "1.0.0-alpha.16"
deadpool-redis = "0.15"
parking_lot = "0.12"
serde_repr = "0.1"
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
arc-swap = "1"
argon2 = "0.5"
blake3 = "1"
envy = "0.4"
rand = "0.8"
webp = "0.2"
rayon = "1"
vss = "0.1"
url = "2"

[profile.dev.package.argon2]
opt-level = 3
